# second_opinion

./: Cargo.toml  README.md  changelog.md
src/: formatting.rs  fs.rs  main.rs  util.rs
src/mmb/: index.rs  mod.rs  proof.rs  stmt.rs  unify.rs
src/mmz/: math_parser.rs  mod.rs  parse.rs
test_resources/: a.mm0  a.mmb  b.mm1  c.mm0  c.mm1  d.mm0  e.mm1  g.mm0  short.mm0  short.mm1  short.mmb
test_resources/cycle/: cycleA.mm0  cycleB.mm0
test_resources/diamond/: a.mm1  a.mmb  b.mm0  c.mm0  c.mm1  e.mm1  f.mm0  g.mm1
