[package]
name = "second_opinion"
version = "0.1.3"
authors = ["ammkrn_"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level=3
overflow-checks = true
#lto=true

[dependencies]
clap = "2.33.3"
crossbeam-utils = "0.8.1"
bumpalo = { version = "3.5.0", features = ["collections"] }
