[package]
name = "second_opinion"
version = "0.2.1"
authors = ["ammkrn"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level=3
overflow-checks=true
#lto=true

[profile.dev]
debug=true

[dependencies]
bumpalo = { version = "3.5.0", features = ["collections"] }
clap = "2.33.3"
crossbeam-utils = "0.8.1"
mm0_util = "0.1.4"
mm0b_parser = "0.1.4"
